staff-button small fix

--- a/src/components/staff/staff-button/staff-button.scss
+++ b/src/components/staff/staff-button/staff-button.scss
@@ -14,9 +14,4 @@
     opacity: 0.5;
     cursor: default;
   }
-  
-  &--pending {
-    opacity: 0.5;
-    cursor: default;
-  }
 }
